--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ hr{
     
 }
 h1{
-    color:white;
+    color:#00FF73;
     font-family:'Courier New', Courier, monospace;
     font-size: 4em;
     margin-top: 6%;
